# Context-Engine

./: .clang-tidy  .gitattributes  .gitignore  CLA.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  vcpkg.json
spikes/cef-compositing/: CMakeLists.txt  FINDINGS.md  README.md
spikes/cef-compositing/assets/: ui.html
spikes/cef-compositing/src/: main.cpp  renderer_d3d11.cpp  renderer_d3d11.hpp
spikes/dockview-cef/: CMakeLists.txt  FINDINGS.md  README.md  supply-chain-review.md
spikes/dockview-cef/src/: main.cpp
spikes/dockview-cef/tools/: run_probes.py
spikes/dockview-cef/web/: harness.css  index.html  panel.html  panel.js  probes.js
spikes/ecs/: CMakeLists.txt  FINDINGS.md
spikes/ecs/common/: bench.h  grid.h  harness.h  workload.h
spikes/ecs/custom/: main.cpp  mini_ecs.h
spikes/ecs/entt/: main.cpp
spikes/ecs/flecs/: main.cpp
spikes/ecs/zerocopy/: main.cpp
spikes/hello/: CMakeLists.txt  main.cpp
spikes/js-engine/: CMakeLists.txt  FINDINGS.md  README.md  run_bench.py
spikes/js-engine/results/: 2026-07-02-ryzen9950x.json
spikes/js-engine/src/: bench_main.cpp  engine_quickjs.cpp  engine_v8.cpp
spikes/parse-bench/: CMakeLists.txt  FINDINGS.md
spikes/parse-bench/src/: canonical.cpp  canonical.h  json_value.h  main.cpp  merge.cpp  merge.h
spikes/wasm/: CMakeLists.txt  FINDINGS.md  README.md  aot_pin_guard.cmake  run_bench.py
spikes/wasm/guest/: build_module.py  module.cpp  module.wasm
spikes/wasm/results/: 2026-07-02-ryzen9950x.json
spikes/wasm/src/: bench_main.cpp  engine_wamr.cpp  engine_wasmtime.cpp
spikes/webgpu/: CMakeLists.txt  FINDINGS.md  README.md
spikes/webgpu/src/: main.cpp
src/: .clang-format  CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
src/cli/: CMakeLists.txt
src/cli/src/: app.cpp  args.cpp  attach_command.cpp  bench_command.cpp  build_command.cpp  daemon_command.cpp  determinism_command.cpp  doctor_command.cpp  edit_open.cpp  editor_driver.cpp  fetch_command.cpp  install_command.cpp  json_walk.h  main.cpp  merge_command.cpp  migrate_command.cpp  profile_command.cpp  replay_command.cpp  scaffold.cpp  session_command.cpp  set_command.cpp  tilemap_command.cpp  ui_command.cpp  wire_client.cpp
src/cli/tests/: cli_test.h  process_util.h  test_attach_e2e.cpp  test_bench_command.cpp  test_build_command.cpp  test_cli.cpp  test_determinism_command.cpp  test_doctor_command.cpp  test_edit_open.cpp  test_editor_driver.cpp  test_fetch_e2e.cpp  test_merge_command.cpp  test_migrate_command.cpp  test_pkg_command.cpp  test_profile_command.cpp  test_scaffold.cpp  test_session_command.cpp  test_set_command.cpp  test_ui_command.cpp
src/common/: CMakeLists.txt
src/common/src/: child_process.cpp  subprocess.cpp  verify_signature.cpp
src/common/tests/: common_test.h  test_child_process.cpp  test_subprocess.cpp  test_verify_signature.cpp
src/editor/: README.md
src/editor/assetdb/: CMakeLists.txt  README.md
src/editor/bridge/: CMakeLists.txt
src/editor/cef/: CMakeLists.txt  README.md
src/editor/client/: CMakeLists.txt
src/editor/component/: CMakeLists.txt  README.md
src/editor/compose/: CMakeLists.txt  README.md
src/editor/contract/: CMakeLists.txt
src/editor/derivation/: CMakeLists.txt  README.md
src/editor/editorkernel/: CMakeLists.txt  README.md
src/editor/filesync/: CMakeLists.txt  README.md
src/editor/gui/: CMakeLists.txt  README.md
src/editor/import/: CMakeLists.txt  README.md
src/editor/kinds/: CMakeLists.txt  README.md
src/editor/merge/: CMakeLists.txt  README.md
src/editor/migrate/: CMakeLists.txt  README.md
src/editor/pack/: CMakeLists.txt  README.md
src/editor/pkg/: CMakeLists.txt  README.md
src/editor/schedule/: CMakeLists.txt  README.md
src/editor/schema/: CMakeLists.txt  README.md
src/editor/serializer/: CMakeLists.txt  README.md
src/editor/shell/: CMakeLists.txt  README.md
src/editor/system/: CMakeLists.txt  README.md
src/editor/tilemap/: CMakeLists.txt
src/editor/webui/: CMakeLists.txt  README.md
src/kernel/: CMakeLists.txt  README.md
src/kernel/registration/: CMakeLists.txt  README.md  dce_footprint_check.cmake  generate_registration.cmake  probe_main.cpp
src/kernel/src/: command_buffer.cpp  event_bus.cpp  kernel.cpp  module.cpp  platform.cpp  scheduler.cpp  world.cpp
src/kernel/tests/: kernel_test.h  test_command_buffer.cpp  test_event_bus.cpp  test_kernel.cpp  test_module_registry.cpp  test_platform.cpp  test_resource.cpp  test_scheduler.cpp  test_world.cpp  test_world_raw.cpp  test_world_replication.cpp
src/render/: CMakeLists.txt  README.md
src/render/lit/: CMakeLists.txt  README.md
src/render/material/: CMakeLists.txt  README.md
src/render/present/: CMakeLists.txt  README.md
src/render/shadercc/: CMakeLists.txt  README.md  smoke.cpp
src/render/sprite/: CMakeLists.txt  README.md
src/render/src/: extract.cpp  profile_hud.cpp  renderdoc_capture.cpp  renderer.cpp
src/render/tests/: render_test.h  render_test_rhi.h  test_extract.cpp  test_golden_cpu.cpp  test_headless.cpp  test_light_extract.cpp  test_m4_exit.cpp  test_profile_hud.cpp  test_renderdoc_capture.cpp  test_rhi.cpp  test_ui_panel_extract.cpp  test_web_parity.cpp
src/render/ui/: CMakeLists.txt  README.md
src/render/web/: CMakeLists.txt  README.md  web_export_main.cpp  web_main.cpp
src/runtime/: README.md
src/runtime/content/: CMakeLists.txt  README.md
src/runtime/determinism/: CMakeLists.txt
src/runtime/host/: CMakeLists.txt  README.md  render_footprint_check.cmake
src/runtime/js/: CMakeLists.txt  README.md  tsan-suppressions.txt
src/runtime/netsync/: CMakeLists.txt  README.md
src/runtime/profile/: CMakeLists.txt  README.md
src/runtime/save/: CMakeLists.txt  README.md
src/runtime/session/: CMakeLists.txt  README.md
src/runtime/ts/: CMakeLists.txt  README.md  lsan-suppressions.txt
src/runtime/wasm/: CMakeLists.txt  README.md
src/testing/: CMakeLists.txt
src/testing/src/: fault_scenarios.cpp
src/testing/tests/: test_crash_recovery.cpp  test_seed_replay.cpp  test_seeded_rng.cpp  (+3 more)
(+1343 files in other folders)
